# zrasr

./: .gitignore  notes_k2.txt  pyproject.toml
librispeech/: codec_prepare.py  debug.py  test_ngram_perplex.py  train_cfmam.py  train_dfm.py  train_lmdfm.py  train_mwer.py  train_wav2vec_k2.py
librispeech/hparams/: cfmam.yaml  dfm.yaml  focal_sampling.yaml  hyperconformer.yaml  lmdfm.yaml  seed_model.yaml  wav2vec_k2.yaml
librispeech/tokenizer/: librispeech_prepare.py
librispeech/tokenizer/hparams/: 1024_unigram_subword_bpe.yaml
librispeech/xps/: alpha.sh  beta.sh  beta2.sh  dfm_codebooks.sh  lm_sweep.sh  lr_sweep.sh  t_warmup_sweep.sh
src/: cfm_model.py  char_counter.py  mwa_loss.py
src/integrations/: codec.py
src/model/: transformer.py
tedlium3/: train_cfmam.py
tedlium3/hparams/: cfmam.yaml  tokenizer.yaml
zambezi-voice/: train_cfmam.py  zambezivoice_prepare.py
zambezi-voice/hparams/: cfmam.yaml
